<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_name">

    <EditTextPreference
        android:defaultValue="@string/settings_query_default"
        android:inputType="text"
        android:key="@string/settings_query_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_query_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_results_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_results_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_results_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_open_in_default"
        android:entries="@array/settings_open_in_labels"
        android:entryValues="@array/settings_open_in_values"
        android:key="@string/settings_open_in_key"
        android:title="@string/settings_open_in_label" />

</PreferenceScreen>